--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,29 +1,36 @@
-name: Kilnfi_connect_rs::Release
+name: 'Kilnfi_connect_rs::Release'
 
 on:
   workflow_dispatch:
-    
-permissions:
-  pull-requests: write
-  contents: write
+  push:
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
 
-  release-plz:
-    name: Release
-    runs-on: ubuntu-22.04
+  release:
+    permissions:
+      contents: write 
+      attestations: write
+      id-token: write
+    name: 'release'
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: 'Checkout repository'
+        uses: 'actions/checkout@v4'
         with:
           fetch-depth: 0
-      - name: Install Rust toolchain
+      - name: 'Install Rust toolchain'
         uses: dtolnay/rust-toolchain@stable
-
-      - name: Release
+      - name: 'release'
+        if: contains(github.ref, '-') == false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}  
-        uses: katyo/publish-crates@v2
+        uses: 'katyo/publish-crates@v2'
         with:
-          registry-token: ${{ env.CARGO_REGISTRY_TOKEN }}
+          registry-token: ${{ env.CARGO_REGISTRY_TOKEN }}*
+      - name: 'write release notes'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: docker://antonyurchenko/git-release:latest
