--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kilnfi_connect_rs"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
 readme = "README.md"
 homepage = "https://github.com/Neal-C/kilnfi_connect_rs"
@@ -13,20 +13,13 @@ repository = "https://github.com/Neal-C/kilnfi_connect_rs.git"
 rust-version = "1.84.1"
 
 [dependencies]
-ureq = {version = "3.0.3", features = ["json"]}
-thiserror = "2.0.11"
+ureq = {version = "3.0.10", features = ["json"]}
+thiserror = "2.0.12"
 ## json
-serde = { version = "1.0.214", features = ["derive"]}
-serde_json = "1.0.132"
+serde = { version = "1.0.219", features = ["derive"]}
+serde_json = "1.0.140"
 ## stuff
-uuid = { version = "1.11.0", features = ["v4", "serde"]}
-chrono = { version = "0.4.38", features = ["serde"]}
-strum_macros = "0.26.4"
-
-[dev-dependencies]
-tokio = { version = "1.17.0", default-features = false, features = [
-    "macros",
-    "rt-multi-thread",
-    "time",
-] }
-tokio-test = "0.4.2"
+uuid = { version = "1.16.0", features = ["v4", "serde"]}
+chrono = { version = "0.4.40", features = ["serde"]}
+strum = "0.27.1"
+strum_macros = "0.27.1"
