--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: 'Install Rust toolchain'
         uses: dtolnay/rust-toolchain@stable
       - name: 'release'
-        if: contains(github.ref, '-') == false
+        # if: contains(github.ref, '-') == false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}  
