--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,8 +22,10 @@ jobs:
           fetch-depth: 0
       - name: 'Install Rust toolchain'
         uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: 'stable 12 months ago'
       - name: 'release'
-        # if: contains(github.ref, '-') == false
+        if: contains(github.ref, '-') == false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}  
