--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,9 +21,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: 'Install Rust toolchain'
-        uses: dtolnay/rust-toolchain@master
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: 1.85.1
+          toolchain: 'stable 12 months'
       - name: 'release'
         if: contains(github.ref, '-') == false
         env:
@@ -31,7 +31,7 @@ jobs:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}  
         uses: 'katyo/publish-crates@v2'
         with:
-          registry-token: ${{ env.CARGO_REGISTRY_TOKEN }}*
+          registry-token: ${{ env.CARGO_REGISTRY_TOKEN }}
       - name: 'write release notes'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
