--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: 'Install Rust toolchain'
         uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: 'stable 12 months ago'
+          toolchain: 1.85.1
       - name: 'release'
         if: contains(github.ref, '-') == false
         env:
